--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     </article>
 
     </section>
+
     <article class="eventarticle">
-      <a href="" class="button"><h3>Create an Event</h3></a>
+      <a href="" class="button" id="button"><h3>Create an Event</h3></a>
     </article>
 
   </body>
