fixed image link

--- a/grand-cayman.html
+++ b/grand-cayman.html
@@ -27,7 +27,7 @@
         Grand Cayman
       </p>
       </h2>
-      <img src="Grand-Cayman.jpg">
+      <img src="grand-cayman.jpg">
       <p>
       Grand Cayman is the largest island of the tri-island country. While it is equally as beautiful as its younger sisters it is a key stakeholder in the global financial industry.
       </p>
